feat: add tax page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,11 @@ html.dark {
   --footer-text-color: #e5eaf3;
 }
 
+// reset
+li {
+  list-style-type: none;
+}
+
 body {
   background-color: var(--bg-color);
 }
@@ -22,6 +27,12 @@ body {
 // flex
 .flex {
   display: flex;
+}
+.flex-col {
+  flex-direction: column;
+}
+.flex-1 {
+  flex: 1 1 0%;
 }
 .items-center {
   align-items: center;
@@ -47,6 +58,17 @@ body {
 // width
 .w-full {
   width: 100%;
+}
+.h-full {
+  height: 100%;
+}
+
+.overflow-auto {
+  overflow: auto
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 // cursor
