--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,19 +4,29 @@
 :root {
   --bg-color: var(--el-bg-color);
   --page-bg-color: #f0f2f5;
-  --page-text-color: rgba(0,0,0,0.85);
+  --page-text-color: rgba(0, 0, 0, 0.85);
   --footer-text-color: rgba(0, 0, 0, 0.45);
 }
 
 html.dark {
   --page-bg-color: #1d1e1f;
-  --page-text-color: rgba(255,255,255,0.85);
+  --page-text-color: rgba(255, 255, 255, 0.85);
   --footer-text-color: #e5eaf3;
 }
 
 // reset
 li {
   list-style-type: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 body {
@@ -57,6 +67,12 @@ body {
 .mt-3 {
   margin-top: 12px;
 }
+.mt-4 {
+  margin-top: 16px;
+}
+.mt-5 {
+  margin-top: 20px;
+}
 
 // width
 .w-full {
@@ -67,7 +83,7 @@ body {
 }
 
 .overflow-auto {
-  overflow: auto
+  overflow: auto;
 }
 
 .overflow-hidden {
