--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,6 +15,9 @@ html.dark {
 }
 
 // reset
+ul {
+  padding-inline-start: 0;
+}
 li {
   list-style-type: none;
 }
@@ -31,6 +34,10 @@ h6 {
 
 body {
   background-color: var(--bg-color);
+}
+
+a {
+  text-decoration: none;
 }
 
 // 部分类名参考 tailwind 命名
@@ -58,6 +65,9 @@ body {
 .mr-4 {
   margin-right: 16px;
 }
+.ml-auto {
+  margin-left: auto;
+}
 .ml-3 {
   margin-left: 12px;
 }
@@ -72,6 +82,9 @@ body {
 }
 .mt-5 {
   margin-top: 20px;
+}
+.mb-4 {
+  margin-bottom: 16px;
 }
 
 // width
