feat: support add to local library

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -107,3 +107,11 @@ a {
 .cursor-pointer {
   cursor: pointer;
 }
+
+// line-clamp
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
